@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sat, 12 Oct 2024 05:26:05 +0800</lastBuildDate>
+  <lastBuildDate>Sat, 12 Oct 2024 05:28:16 +0800</lastBuildDate>
 <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
   <link>https://www.famechos.me/news/KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單.html</link>
@@ -60,5 +60,11 @@
   <description>Kpop商品銷售商的懲罰太輕議員國會議員批評對於Kpop商品銷售商的不公平消費行為懲罰太輕不能有效地制止這些行為崔俊源議員在國會文化體育觀光委員會的聽證會上表示娛樂巨頭...</description>
   <category>K-Pop</category>
   <pubDate>Sat, 12 Oct 2024 05:26:05 +0800</pubDate>
+</item><item>
+  <title>K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫</title>
+  <link>https://www.famechos.me/news/K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫.html</link>
+  <description>今日K-pop：Stray Kids將於下月在日本發行第二張專輯 。Stray Kids將於11月13日在日本發行第二張完整專輯《Giant》。這支八人組合於2020年3月在日本出道，推出精選輯《SKZ2020》，並已發行三張迷你專輯、兩張實體單曲和一張完整專輯。。。以下是Stray Kids在日本的成績：</description>
+  <category>K-Pop</category>
+  <pubDate>Sat, 12 Oct 2024 05:28:16 +0800</pubDate>
 </item></channel>
 </rss>
