@@ -1,0 +1,280 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "K-pop\u98a8\u66b4\u4f86\u8972\uff01Stray Kids\u3001\u9632\u5f48\u5c11\u5e74\u5718\u6734\u667a\u65fb\u3001NewJeans\u3001MAMAMOO\u739f\u661f\u63a5\u9023\u767c\u8868\u65b0\u4f5c\u54c1\u8207\u5de1\u6f14\u8a08\u756b", "description": "K-pop\u98a8\u66b4\u4f86\u8972\uff01Stray Kids\u3001\u9632\u5f48\u5c11\u5e74\u5718\u6734\u667a\u65fb\u3001NewJeans\u3001MAMAMOO\u739f\u661f\u63a5\u9023\u767c\u8868\u65b0\u4f5c\u54c1\u8207\u5de1\u6f14\u8a08\u756b", "url": "https://www.famechos.me/news/K-pop\u98a8\u66b4\u4f86\u8972\uff01Stray Kids\u3001\u9632\u5f48\u5c11\u5e74\u5718\u6734\u667a\u65fb\u3001NewJeans\u3001MAMAMOO\u739f\u661f\u63a5\u9023\u767c\u8868\u65b0\u4f5c\u54c1\u8207\u5de1\u6f14\u8a08\u756b.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-12T05:28:04.846887+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫.html"/>
+<meta name="description" content="K-pop風暴來襲！眾大牌接連發表新作品與巡演計畫，Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星等人氣團體帶來最新音樂享受！" />
+<meta name="keywords" content="K-pop, Stray Kids, 防彈少年團, 朴智旻, NewJeans, MAMAMOO, 玟星, 新作品, 巡演計畫" />
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫.html" />
+        <meta property="og:title" content="K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫" />
+        <meta property="og:description" content="K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫" />
+        <meta property="twitter:description" content="K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <img class="famechos-logo" src="../img/famechos_logo.png">
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-2 nav-type">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button>
+  
+        </div>
+        <div class="nav-type-3 nav-type">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button>
+          
+        </div>
+        <div class="nav-type-4 nav-type">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button>
+        </div>
+        <div class="nav-setting">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">12/10/2024</p>
+        </div>
+	<p>Stray Kids將於11月13日在日本發行第二張完整專輯《Giant》。這支八人組合於2020年3月在日本出道，推出精選輯《SKZ2020》，並已發行三張迷你專輯、兩張實體單曲和一張完整專輯。</p>
+<p>以下是Stray Kids在日本的成績：</p>
+<p>* 去年9月發行的迷你專輯《Social Path (feat. 織部里沙)/ Super Bowl - Japanese ver.》橫掃日本公信榜所有榜單，包括每日、每週、每週綜合和每月專輯排名。</p>
+<p>* 該組合在日本首張銷量超過一百萬張的專輯。</p>
+<p>與此同時，Stray Kids於星期二從洛杉磯返回韓國，之前他們在美國音樂獎50周年特別節目中拍攝了一場演出。該組合是繼防彈少年團之後第二支受邀在美國音樂獎上表演的K-pop組合。</p>
+<p>Stray Kids的巡演日程如下：</p>
+<p>* 星期六，Stray Kids在新加坡恢復了他們的“dominATE”巡演。</p>
+<p>* 10月19日，Stray Kids將在澳大利亞墨爾本表演。</p>
+<h2>朴智旻創下紀錄！防彈少年團成員在《告示牌》百大熱門榜上連續十週占據榜位</h2>
+<p>防彈少年團成員朴智旻的個人單曲《Who》在《告示牌》百大熱門榜上連續十週排名第30位。《Who》是朴智旻第二張個人迷你專輯《Muse》的主打單曲，該專輯在《告示牌》200榜上排名第91位，比上週上升四位。</p>
+<p>以下是朴智旻的成績：</p>
+<p>* 《Who》在主打單曲榜上最高排名第12位。</p>
+* 在英國官方單曲榜上停留了十週，這是朴智旻作為個人藝人在英國榜單上最長的停留時間。<h2>NewJeans和MAMAMOO的音樂成績</h2>
+<p>NewJeans的歌曲《Who》在Spotify的每週全球熱門歌曲榜上排名第三，而《Muse》則在專輯榜上排名第八。截至目前，《Who》在Spotify上的播放量已超過6億次，用時66天，是今年的紀錄。</p>
+<h2>Spotify上的NewJeans播放量突破3億次</h2>
+<p>NewJeans的同名單曲在Spotify上的播放量已超過3億次。該組合的經紀公司ADOR宣佈，這是該組合第六首播放量超過3億次的歌曲。之前的五首歌曲分別是《OMG》、《Ditto》、《Hype Boy》、《Attention》和《Super Shy》。</p>
+<p>該組合在Spotify上的總播放量已超過52億次。</p>
+<p>另一方面，《Super Shy》被美國音樂出版物Pitchfork評為“2020年代迄今為止的100首最佳歌曲”之一，排名第13位，是唯一入選的K-pop歌曲。</p>
+<h2>玟星將在北美展開巡演之旅</h2>
+<p>玟星透過經紀公司RBW娛樂宣佈，她將把首次個人巡演延伸至北美。這次巡演將於11月12日起在美國和加拿大12個城市舉行，並將在洛杉磯開啟北美巡演。</p>
+<p>玟星早前在亞洲舉行了首次個人巡演「玟星個人演唱會：星光下的史詩」，並在8月初於澳門結束巡演。她的首張個人專輯「Starlit of Muse」於2月發行，並在十個地區的iTunes排行榜前100名音乐专辑中登頂。主打歌「Touchin & Movin」也在iTunes的Top Songs Chart中奪冠。</p>
+<ol>
+<li>巡演城市：美國和加拿大12個城市</li>
+<li>巡演日期：11月12日起</li>
+<li>開啟城市：洛杉磯</li>
+</ol>
+<p>玟星重新發行了該專輯的20首歌曲黑膠版本，名為「Starlit of Twinkle」。</p>
+
+<p>資料來源：Korea Herald</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SOluQrHCuGQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美.html">戀愛的複雜情感！Yena新單曲《Nemo Nemo》巧妙隱喻愛情的傷與美</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍.html">K-pop新革命！Trot與K-pop融合掀起韓國音樂新浪潮，林英雄、SM娛樂領軍</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V摘下日本白金認證、Infinite慶祝出道15周年.html">K-POP風暴席捲全球：ATEEZ擴大歐洲巡迴、BTS成員V摘下日本白金認證、Infinite慶祝出道15周年</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <img class="famechos-logo-footer" src="../img/famechos_logo.png">
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <p class="footer-text">K-POP</p>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <p class="footer-text">J-POP</p>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <p class="footer-text">影視</p>
+        </div>
+        <div class="other-footer-box footer-box">
+          <p class="footer-text">其他</p>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
