@@ -80,4 +80,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/K-pop風暴來襲！Stray Kids、防彈少年團朴智旻、NewJeans、MAMAMOO玟星接連發表新作品與巡演計畫.html</ns0:loc>
+    <ns0:lastmod>2024-10-12T05:28:16+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
