@@ -10,3 +10,4 @@ https://tokyocheapo.com/entertainment/japanese-culture-and-tradition/where-to-se
 https://www.koreaherald.com/view.php?ud=20241001050096
 https://www.koreaherald.com/view.php?ud=20241002050512
 https://www.koreaherald.com/view.php?ud=20241010050640
+https://www.koreaherald.com/view.php?ud=20241008050610
